created new chapter

--- a/_quarto.yml
+++ b/_quarto.yml
@@ -9,6 +9,7 @@ book:
   chapters:
     - index.qmd
     - PCA.qmd
+    - gradient_optimization.qmd
     - references.qmd
 
 bibliography: references.bib
